Fix columns border cut off

--- a/css/ota_widget.scss
+++ b/css/ota_widget.scss
@@ -11,14 +11,22 @@ body,html {
 }
 ota-widget {
   @import 'flags';
+  font-size: 14px;
 
   color: #7f7a7a;
   font-family: Helvetica;
 
   h1 {
     font-size: 2em;
+    span {
+      max-width: calc(100vw - 120px); 
+      display: inline-block;
+    }
     img {
       vertical-align: middle;
+      height: 90px;
+      width: auto;
+      margin-left: 10px;
     }
   }
 
@@ -33,8 +41,10 @@ ota-widget {
     column-fill: auto;
 
     // avoid webkit cutting border
-    .mdc-image-list__item {
-      padding-bottom: 1px;
+    .mdc-image-list__item .block {
+      display: inline-block;
+      width: 100%;
+      box-sizing: border-box;
     }
   }
 
@@ -180,6 +190,7 @@ ota-widget {
       .name {
         vertical-align: top;
         line-height: 1.4;
+        width: calc(100% - 50px);
       }
       .icon {
         color: #74bc55;
@@ -317,6 +328,7 @@ ota-widget {
 
   // Mobile first
   @media (min-width: 768px) {
+    font-size: 16px;
     .mentions {
       .topic {
         font-size: 15px;
@@ -329,6 +341,7 @@ ota-widget {
   }
 
   @media (min-width: 1200px) {
+    font-size: 18px;
     .masonry-image-list {
       -webkit-column-count: 3;
       column-count: 3;
